# zarr-dump

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: README.md  ci.yml  release.yml  simple-release.yml  test.yml
examples/: test_coordinates.rs
src/: cf.rs  lib.rs  main.rs  metadata.rs  plot.rs  store.rs  visualize.rs
tests/: cli.rs
